--- a/config/ssl.conf
+++ b/config/ssl.conf
@@ -1,13 +1,19 @@
+
+server {
+  listen 80;
+  server_name *; 
+  return 301 https://<Your server name goes here>$request_uri;
+}
 server {
   listen 443 http2 ssl;
-  server_name 0.0.0.0;
+  server_name *;
 
   ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
   ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
   ssl_dhparam /etc/ssl/certs/dhparam.pem;
   . . .
   root /usr/share/nginx/html;
-  
+
   location / {
     proxy_set_header        Host $host;
     proxy_set_header        X-Real-IP $remote_addr;
