--- a/config/ssl.conf
+++ b/config/ssl.conf
@@ -1,12 +1,12 @@
 
 server {
   listen 80;
-  server_name *; 
+  server_name _; 
   return 301 https://<Your server name goes here>$request_uri;
 }
 server {
   listen 443 http2 ssl;
-  server_name *;
+  server_name _;
 
   ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
   ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
