--- a/config/ssl.conf
+++ b/config/ssl.conf
@@ -2,7 +2,7 @@
 server {
   listen 80;
   server_name _; 
-  return 301 https://<Your server name goes here>$request_uri;
+  return 301 https://$host$request_uri/;
 }
 server {
   listen 443 http2 ssl;
